--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -7,17 +7,81 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Title -->
-        <title>Coding Jobs</title>
+        <title>Job seeker</title>
 
         <!-- Styles -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css" />
+        <style>
+            #slider{
+                overflow: hidden;
+            }
+
+            @media screen and (max-width: 1023px) {
+                #slider .card-content{
+                    display: none;
+                }
+            }
+
+            .prev,
+            .next {
+                cursor: pointer;
+                position: absolute;
+                top: 50%;
+                width: auto;
+                padding: 16px;
+                margin-top: -50px;
+                color: white;
+                font-weight: bold;
+                font-size: 20px;
+                transition: 0.6s ease;
+                border-radius: 0 3px 3px 0;
+                user-select: none;
+                -webkit-user-select: none;
+            }
+
+            .next {
+                right: 0;
+                border-radius: 3px 0 0 3px;
+            }
+
+
+            .numbertext {
+                color: #f2f2f2;
+                font-size: 12px;
+                padding: 8px 12px;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+
+            .item-slide img {
+                max-width: 1200px;
+            }
+
+            .caption-container {
+                color: white;
+            }
+        </style>
     </head>
 
     <body>
         <!-- Navbar -->
         <nav class="navbar is-light">
             <div class="navbar-brand">
-                <a href="{% url 'frontpage' %}" class="navbar-item"><strong>CodingJobs</strong></a>
+                <a href="{% url 'dashboard' %}" class="navbar-item"><strong>Dashboard</strong></a>
+            </div>
+
+            <div class="navbar-brand">
+                <a href="{% url 'frontpage' %}" class="navbar-item"><strong>Jobs</strong></a>
+            </div>
+
+            <div class="navbar-brand">
+                <a href="{% url 'awesomejobs' %}" class="navbar-item"><strong>Crawled Jobs</strong></a>
+            </div>
+
+            <div class="navbar-brand">
+                <a href="{% url 'about' %}" class="navbar-item"><strong>About</strong></a>
             </div>
 
             <div class="navbar-menu">
