--- a/userprofile/templates/userprofile/dashboard.html
+++ b/userprofile/templates/userprofile/dashboard.html
@@ -1,19 +1,17 @@
 {% extends 'mysite/base.html' %}
 
 {% block content %}
-    <h1 class="title">Dashboard</h1>
+    <h1 class="title"> Your Dashboard</h1>
 
     {% if userprofile.is_employer %}
         <h2 class="subtitle">Jobs</h2>
 
-        <a href="{% url 'add_job' %}" class="button is-success">Add job</a>
+        <a href="{% url 'add_job' %}" class="button is-success">Post job</a>
 
         {% for job in request.user.jobs.all %}
             <div class="job">
                 <a href="{% url 'view_dashboard_job' job.id %}">{{ job.title }} ({{ job.get_status_display }})</a>
             </div>
-        {% empty %}
-            <p>You don't have any jobs yet...</p>
         {% endfor %}
     {% else %}
         <h2 class="subtitle">Applications</h2>
@@ -22,8 +20,6 @@
             <div class="application">
                 <a href="{% url 'view_application' application.id %}">{{ application.job.title }}</a>
             </div>
-        {% empty %}
-            <p>You haven't applied for any jobs yet...</p>
         {% endfor %}
     {% endif %}
 {% endblock %}
